log
Wed 22 Mar 2023 01:10:17 AM UTC: 
 list.c | 27 +++++++++++++++++++++++----
 1 file changed, 23 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:17: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   44 |   list->current=lista->head;
      |                 ^~~~~
      |                 list
list.c:44:17: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘lastList’:
list.c:59:9: error: expected expression before ‘List’
   59 |   while(List->current->next!=NULL)
      |         ^~~~
list.c:61:40: error: expected ‘;’ before ‘}’ token
   61 |       list->current=list->current->next
      |                                        ^
      |                                        ;
   62 |     }
      |     ~                                   
Compilation failed
ce7e097
Wed 22 Mar 2023 01:10:26 AM UTC: 
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:17: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   44 |   list->current=lista->head;
      |                 ^~~~~
      |                 list
list.c:44:17: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘lastList’:
list.c:59:9: error: expected expression before ‘List’
   59 |   while(List->current->next!=NULL)
      |         ^~~~
list.c:61:40: error: expected ‘;’ before ‘}’ token
   61 |       list->current=list->current->next
      |                                        ^
      |                                        ;
   62 |     }
      |     ~                                   
Compilation failed
4272268
Wed 22 Mar 2023 01:10:47 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:59:9: error: expected expression before ‘List’
   59 |   while(List->current->next!=NULL)
      |         ^~~~
list.c:61:40: error: expected ‘;’ before ‘}’ token
   61 |       list->current=list->current->next
      |                                        ^
      |                                        ;
   62 |     }
      |     ~                                   
Compilation failed
f54cdcb
Wed 22 Mar 2023 01:10:59 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:61:40: error: expected ‘;’ before ‘}’ token
   61 |       list->current=list->current->next
      |                                        ^
      |                                        ;
   62 |     }
      |     ~                                   
Compilation failed
b29022d
Wed 22 Mar 2023 01:11:12 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9fe1605
Wed 22 Mar 2023 01:14:47 AM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
8fdd729
Wed 22 Mar 2023 01:16:54 AM UTC: 
 list.c | 15 ++-------------
 1 file changed, 2 insertions(+), 13 deletions(-)
 tests:  1|5
total_score: 10/70
692d3dd
Wed 22 Mar 2023 01:18:56 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4f7fb42
Wed 22 Mar 2023 01:19:46 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d0e748a
Wed 22 Mar 2023 01:20:26 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
01fadfd
Wed 22 Mar 2023 01:23:21 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c47ff1c
